--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
 	<meta charset='utf8'>
-	<meta name='viewport' content='width=device-width'>
+	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Генератор клавиатуры</title>
+	<title>Клавиатура</title>
 
-	<link rel='stylesheet' href='global.css'>
-	<link rel='stylesheet' href='bundle.css'>
+	<link rel='icon' type='image/png' href='/favicon.ico'>
+	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/build/bundle.css'>
+
+	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
-	<script src='bundle.js'></script>
 </body>
 </html>
