--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
 
 	<title>Клавиатура</title>
 
-	<link rel='icon' type='image/png' href='/favicon.ico'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='icon' type='image/png' href='favicon.ico'>
+	<link rel='stylesheet' href='global.css'>
+	<link rel='stylesheet' href='build/bundle.css'>
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='build/bundle.js'></script>
 </head>
 
 <body>
